--- a/src/css/index.css
+++ b/src/css/index.css
@@ -200,7 +200,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   .about
   {
    position: relative;
-   top: 110px;
+   top: 109px;
+   right: 60px;
   
     font-size: .9em;
     color: #fff;
@@ -214,16 +215,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     margin: 2em 0;
     letter-spacing: 4px;
     height: 50px;
-  }
+    }
    
 
   
   .contact
   {
     position: relative;
-    left: 230px;
+    left: 300px;
     top: 1px;
-    
     font-size: .9em;
     color: #fff;
     background: black;
